            NOTE: Please refer to the migration notes!
    * 3426 FIX: sms: fixed wrong message handling after message was quoted and therefore too long
    * 3139 FIX: fixed a couple of minor issues in call to notification scripts...
    * 3146 FIX: notification scripts will now also timeout when sending a bulk notification...

    BI:
    * 3271 New option in aggregation for tuning aggregation of downtimes...
    * 3396 Change default setting of Precompile aggregations on demand to ON now...
    * 3449 The host alias can now be used in BI aggregates...
    * 3546 Drastically sped up response time on querying single aggregations...
    * 3873 BI: now rules can easily be copied and deactivate temporarily
    * 3247 FIX: Do not allow multiple BI aggregates with the same title...
    * 3232 FIX: BI: Only querying site of host for specific host status info...
    * 3291 FIX: Improved error handling when searching for BI aggregations with invalid regex
    * 3358 FIX: Fixed BI Boxes views when "Enable BI compilation diagnostics" enabled
    * 3439 FIX: Fixed processing of BI aggregations containing umlauts
    * 3440 FIX: Fixed possible BI exception "Unknown BI aggregation group ..."...
    * 3574 FIX: Fixed broken aggregations snapin when using aggregations based on hard states...
    * 3551 FIX: Now able to open BI aggregations containing a few hundred hosts...

    Reporting & Availability:
    * 3267 New availability option for reclassifying host state "unreachable"...
    * 3102 added option to availability to include host alias in reports...
    * 3394 Availability: Annotations can now be used to reclassify the scheduled downtime status...
    * 3249 FIX: Fix missing filter for non-OK services when report is called via context button
    * 3268 FIX: Availability options were invalid after resetting them...
    * 3269 FIX: Fix rendering of floating point values < 1 in graphs (e.g. CPU load)