@@ -1,0 +1,10 @@
+Title: EC condition: Fixed default value of rule id selection
+Level: 1
+Component: notifications
+Class: fix
+Compatible: compat
+State: unknown
+Version: 1.4.0i1
+Date: 1474017331
+
+
