@@ -629,6 +629,7 @@
     * 3426 FIX: sms: fixed wrong message handling after message was quoted and therefore too long
     * 3139 FIX: fixed a couple of minor issues in call to notification scripts...
     * 3146 FIX: notification scripts will now also timeout when sending a bulk notification...
+    * 3860 FIX: EC condition: Fixed default value of rule id selection
 
     BI:
     * 3271 New option in aggregation for tuning aggregation of downtimes...
